engine/crates/validation/tests/validation_errors/union_list_member.errors.txt
  × Syntax error:  --> 9:18
  │   |
  │ 9 | union AnyThing = [Test] | Wow!
  │   |                  ^---
  │   |
  │   = expected name
